refactor: 极度精简service层，简化为课程作业级别
QuesService (454→268行, -186行):
- 删除 exportAll() 导出功能
- 删除 findAll(Pageable) 分页查询
- 删除 deleteAll() 批量删除
- 删除 updateQuestion() 及相关的 3 个更新方法
- 保留核心的查询和转换功能

QuestionSelectorService (364→65行, -299行):
- 完全重写为简单随机选题
- 删除序列题(SequenceInfo)逻辑
- 删除重复题(RepeatableQuestionInfo)逻辑
- 删除 QuestionPool 复杂题库管理
- 删除 4 个辅助类
- 只保留最简单的随机打乱选题

总减少: 485 行代码